--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "cesium": "^1.67.0",
+    "@easydarwin/easyplayer": "^1.3.5",
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
     "echarts-liquidfill": "^2.0.5",
@@ -16,7 +16,6 @@
     "node-sass": "^4.13.1",
     "ol": "^6.2.1",
     "swiper": "^5.3.6",
-    "three": "^0.114.0",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.0.0-rc.0",
     "vue-echarts": "^5.0.0-beta.0",
