--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "element-ui": "^2.13.0",
     "node-sass": "^4.13.1",
     "ol": "^6.2.1",
+    "svg-sprite-loader": "^4.2.1",
+    "svgo-loader": "^2.2.1",
     "swiper": "^5.3.6",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.0.0-rc.0",
