--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@easydarwin/easyplayer": "^1.3.5",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "echarts": "^4.6.0",
     "echarts-liquidfill": "^2.0.5",
