--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@easydarwin/easyplayer": "^1.3.5",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "default-passive-events": "^1.0.10",
     "echarts": "^4.6.0",
     "echarts-liquidfill": "^2.0.5",
     "element-ui": "^2.13.0",
